--- a/src/client/style.styl
+++ b/src/client/style.styl
@@ -55,13 +55,20 @@ li > p:first-child
 
 @import "styles/header"
 
-#content [id]:before
-    content: ''
-    display: block
-    height:      50px
-    margin-top: -50px
-    visibility: hidden
-    pointer-events: none
+// #content [id]:before
+//     content: ''
+//     display: inline-block
+//     height: 50px
+//     margin-top: -50px
+//     visibility: hidden
+//     pointer-events: none
+
+:target::before {
+  content: "";
+  display: inline-block;
+  height: 60px; /* fixed header height*/
+  margin: -60px 0 0; /* negative fixed header height */
+}
 
 .cell-content
     overflow: hidden
