--- a/src/client/style.styl
+++ b/src/client/style.styl
@@ -45,6 +45,10 @@ a > .linkIcon
 a
     text-decoration: none
 
+a.local:not(.exists) 
+    color: red
+
+
 // List styles
 li > p:first-child
     margin: 0
@@ -55,20 +59,16 @@ li > p:first-child
 
 @import "styles/header"
 
-// #content [id]:before
-//     content: ''
-//     display: inline-block
-//     height: 50px
-//     margin-top: -50px
-//     visibility: hidden
-//     pointer-events: none
+#content [id]:before
+    content: ''
+    display: inline-block
+    height: 50px
+    margin-top: -50px
+    visibility: hidden
+    pointer-events: none
 
-:target::before {
-  content: "";
-  display: inline-block;
-  height: 60px; /* fixed header height*/
-  margin: -60px 0 0; /* negative fixed header height */
-}
+:target
+    background-color: yellow
 
 .cell-content
     overflow: hidden
