--- a/src/client/style.styl
+++ b/src/client/style.styl
@@ -5,6 +5,7 @@ primary-border = 2px solid primary-color
 body
     max-width 1024px
     margin 0 auto
+    --link: blue
 
 h1
     font-size: 1.7em
@@ -44,6 +45,7 @@ a > .linkIcon
 
 a
     text-decoration: none
+    color: var(--link)
 
 a.local:not(.exists) 
     color: red
@@ -111,17 +113,8 @@ section
             color: transparent
             height: 0
 
-        
-
-
-
-#backlinks
-    color: tint(black, 60%)
-
-
 
 @import "styles/cell"
-
 @import "styles/codecell"
 
 cell, codecell
