--- a/src/client/style.styl
+++ b/src/client/style.styl
@@ -2,10 +2,17 @@
 primary-color = #9999f7
 primary-border = 2px solid primary-color
 
+
+
 body
     max-width 1024px
     margin 0 auto
-    --link: blue
+    --bg: white
+    background-color: var(--bg)
+    --text-color: black
+    --text-secondary-color: grey
+    --text-primary-color: primary-color
+    --text-highlight-bg: yellow
 
 h1
     font-size: 1.7em
@@ -23,16 +30,16 @@ h6
 
 blockquote
     padding: 0 1em;
-    border-left: 3px solid #d3d3d3;
+    border-left: 3px solid var(--text-secondary-color);
     margin: 0;
-    color: #353434;
+    color: var(--text-secondary-color);
 
 a[wikilink="true"]
     text-decoration: none
 
     &:before,
     &:after
-        color: grey
+        color: var(--text-secondary-color)
     &:before 
         content: '['
     &:after 
@@ -45,7 +52,7 @@ a > .linkIcon
 
 a
     text-decoration: none
-    color: var(--link)
+    color: var(--text-primary-color)
 
 a.local:not(.exists) 
     color: red
@@ -70,7 +77,7 @@ li > p:first-child
     pointer-events: none
 
 :target
-    background-color: yellow
+    background-color: var(--text-highlight-bg)
 
 .cell-content
     overflow: hidden
@@ -101,14 +108,14 @@ section
         height: 0
 
     &.selected
-        border-color: primary-color 
+        border-color: var(--text-primary-color)
         border-right-color: transparent
 
         &:before,
         &:after
             display: block
             width: 4px
-            border-bottom: 1px solid primary-color 
+            border-bottom: 1px solid var(--text-primary-color) 
             content: "."
             color: transparent
             height: 0
