--- a/src/client/style.styl
+++ b/src/client/style.styl
@@ -13,6 +13,7 @@ body
     --text-secondary-color: grey
     --text-primary-color: primary-color
     --text-highlight-bg: yellow
+    color: var(--text-color)
 
 h1
     font-size: 1.7em
