--- a/src/client/styles/cell.styl
+++ b/src/client/styles/cell.styl
@@ -1,6 +1,6 @@
 cell
     cell-border-width = 1px 3px
-    cell-border-color = #9999f7
+    cell-border-color = var(--text-primary-color)
 
     padding: 0.6em
     margin: 0
