--- a/src/client/styles/cellmenu.styl
+++ b/src/client/styles/cellmenu.styl
@@ -26,7 +26,7 @@
             padding-right: 0.5em;
 
             li 
-                background-color: #9999f7;
+                background-color: var(--text-primary-color);
                 width: 2em;
                 height: 2em;
                 border-radius: 1em;
@@ -37,5 +37,5 @@
                 justify-content: center;
                 cursor: pointer;
                 pointer-events: all;
-                color: white;
+                color: var(--bg);
                 line-height: 1;
