--- a/src/client/styles/header.styl
+++ b/src/client/styles/header.styl
@@ -1,7 +1,7 @@
 #lit-header
     top: 0
     position: sticky
-    background-color: white
+    background-color: var(--bg)
     z-index: 99999
 
     *[disabled] 
@@ -94,7 +94,7 @@
             & > .MenuItems
                 position: absolute
                 top: 1.6em
-                background-color: white
+                background-color: var(--bg)
                 padding: 0.6em
                 margin: 0 -0.6em
                 box-shadow: 0 3px 3px rgba(0,0,0,0.2)
