--- a/src/client/style.styl
+++ b/src/client/style.styl
@@ -1,9 +1,3 @@
-
-primary-color = #9999f7
-primary-border = 2px solid primary-color
-
-
-
 body
     max-width 1024px
     margin 0 auto
@@ -11,8 +5,9 @@ body
     background-color: var(--bg)
     --text-color: black
     --text-secondary-color: grey
-    --text-primary-color: primary-color
+    --text-primary-color: #9999f7
     --text-highlight-bg: yellow
+    --divider-subtle: #efefef
     color: var(--text-color)
 
 h1
