--- a/src/client/styles/header.styl
+++ b/src/client/styles/header.styl
@@ -87,7 +87,7 @@
 
                     & > *
                         padding-left: 0.4em
-                        border-left: primary-border
+                        border-left: var(--text-primary-color)
 
         &.open:not(.horizontal)
 
@@ -105,7 +105,7 @@
             display: flex
             flex-direction: row
             padding: 0.6em
-            border-bottom: 1px solid #efefef
+            border-bottom: 1px solid var(--divider-subtle)
 
             & > li 
                 flex-direction: row
