--- a/src/client/styles/header.styl
+++ b/src/client/styles/header.styl
@@ -87,7 +87,7 @@
 
                     & > *
                         padding-left: 0.4em
-                        border-left: var(--text-primary-color)
+                        border-left: 3px solid var(--text-primary-color)
 
         &.open:not(.horizontal)
 
