ssr configs and includes

--- a/src/client/style.styl
+++ b/src/client/style.styl
@@ -8,6 +8,7 @@ body
     --text-primary-color: #9999f7
     --text-highlight-bg: yellow
     --divider-subtle: #efefef
+    --medium-space: 0.4em
     color: var(--text-color)
 
 h1
