--- a/src/client/styles/codecell.styl
+++ b/src/client/styles/codecell.styl
@@ -5,7 +5,7 @@ pre
 
     code
         margin: 0
-        padding: 0.4em
+        padding: var(--medium-space)
         min-height: 1em
 
 a.codecell-anchor 
@@ -14,11 +14,9 @@ a.codecell-anchor
     color: inherit
 
 codecell
-    code-cell-spacing = 0.4em
-
     pre code
         display: block
-        padding: code-cell-spacing
+        padding: var(--medium-space)
         background-color: black
         color: white
 
@@ -30,7 +28,7 @@ codecell
         & > .meta .lang:before
             display: inline-block
             content: "▸"
-            padding-right: 0.4em
+            padding-right: var(--medium-space)
         
         .dir-collapse
             display: none
@@ -42,7 +40,7 @@ codecell
         left: 0
         right: 0
         z-index: 9999
-        background-color: white
+        background-color: var(--bg, white);
         overflow: scroll
         box-sizing: border-box
         height: auto
@@ -74,10 +72,10 @@ codecell
             display: none
     
     &.dir-below > pre
-        margin-bottom: 0.4em
+        margin-bottom: var(--medium-space)
 
     &.dir-above > .meta
-        margin-top: 0.4em
+        margin-top: var(--medium-space)
 
     & > .meta
         font-family monospace
@@ -103,8 +101,8 @@ codecell
         
         .tag, .directive, .attribute
                 display: inline-block
-                padding: 0 0.4em 
-                margin-right: 0.4em
+                padding: 0 var(--medium-space) 
+                margin-right: var(--medium-space)
                 border-radius 2px
                 background-color: tint(black, 90%)
         .tag
@@ -120,7 +118,7 @@ codecell
         white-space: pre-wrap
 
         & ~ *:not(.meta)
-            margin-top: 0.4em
+            margin-top: var(--medium-space)
     
     .updatedAt
         cursor pointer
