--- a/src/client/styles/codecell.styl
+++ b/src/client/styles/codecell.styl
@@ -17,8 +17,8 @@ codecell
     pre code
         display: block
         padding: var(--medium-space)
-        background-color: black
-        color: white
+        background-color: var(--code-bg-color);
+        color: var(--code-text-color);
 
     &.collapsed,
     &.dir-collapse:not(.uncollapsed)
@@ -84,20 +84,20 @@ codecell
 
         .lang
             font-weight bold
-            margin-right code-cell-spacing
+            margin-right var(--medium-space)
         
         .repl
             font-style: italic
             color: tint(black, 60%)
-            margin-right code-cell-spacing
+            margin-right var(--medium-space)
 
         .source,
         .output
-            margin-right: code-cell-spacing
+            margin-right: var(--medium-space)
 
         .filename
             color: tint(black, 60%)
-            margin-right code-cell-spacing
+            margin-right var(--medium-space)
         
         .tag, .directive, .attribute
                 display: inline-block
@@ -128,6 +128,20 @@ codecell
         text-align: right
         .Time
             font-weight: bold
+    
+
+// Code Mirror overrides
+#lit-app .cm-gutters
+    background-color: var(--code-bg-color)
+    color: var(--text-secondary-color)
+    border-right-color: var(--divider-subtle)
+
+#lit-app .cm-activeLine.cm-line
+    background-color: var(--text-highlight-bg)
+    color: var(--text-highlight-color)
+
+#lit-app .cm-focused
+    outline: 0 none
 
 codecell.dir-error pre
   border: 2px solid red
