--- a/src/client/styles/header.styl
+++ b/src/client/styles/header.styl
@@ -1,3 +1,28 @@
+.lit-message
+    background-color: #ff0000b3
+    border-bottom: 1px solid #c32d2d
+    font-family: monospace;
+    color: white
+    padding: 0.4em
+
+    .message
+        overflow: hidden
+        flex: 1
+        white-space: pre;
+        cursor: pointer;
+
+    &:not(.showall)
+        display: flex
+        .message
+            white-space: nowrap
+            text-overflow: ellipsis
+        
+
+    .name
+        cursor: pointer
+        margin-left: 0.4em
+        text-decoration: underline
+
 #lit-header
     top: 0
     position: sticky
@@ -8,27 +33,6 @@
         opacity: 0.5
         font-style: italic
         cursor: default
-
-    .lit-message
-        background-color: #ff0000b3
-        border-bottom: 1px solid #c32d2d
-        color: white
-        padding: 0.4em
-    
-        .message
-            overflow: hidden
-            flex: 1
-
-        &:not(.showall)
-            display: flex
-            .message
-                white-space: nowrap
-                text-overflow: ellipsis
-
-        .name
-            cursor: pointer
-            margin-left: 0.4em
-            text-decoration: underline
 
     menu
         margin: 0
