--- a/src/client/styles/header.styl
+++ b/src/client/styles/header.styl
@@ -4,24 +4,29 @@
     font-family: monospace;
     color: white
     padding: 0.4em
+    overflow: scroll;
 
     .message
         overflow: hidden
         flex: 1
-        white-space: pre;
+        white-space: pre-wrap;
         cursor: pointer;
+        display: block;
 
     &:not(.showall)
         display: flex
         .message
             white-space: nowrap
             text-overflow: ellipsis
-        
 
     .name
         cursor: pointer
         margin-left: 0.4em
         text-decoration: underline
+
+    .close 
+        padding: 0 var(--medium-space);
+        cursor: pointer;
 
 #lit-header
     top: 0
