--- a/src/client/styles/viewers.styl
+++ b/src/client/styles/viewers.styl
@@ -13,7 +13,7 @@ cell:not(.selected) codecell iframe
 
 codecell > table
   border-collapse: collapse
-  border: 1px solid #ccc
+  border: 1px solid var(--divider-subtle)
   
   td
     padding: 0.4em
@@ -23,31 +23,55 @@ codecell > table
 .md-block.dir-warn,
 .md-block.dir-box,
 .md-block.dir-success,
-.md-block.dir-error {
-  color: #666;
-  padding: 0.4em;
-  border: 1px solid #ccc;
-  background-color: rgba(0,0,0,0.01);
+.md-block.dir-error
+  position relative
+  color: var(--text-color);
+  padding: var(--medium-space);
+  border: 1px solid var(--divider-subtle);
   border-radius: 2px;
-}
+
+.md-block.dir-note, 
+.md-block.dir-info,
+.md-block.dir-warn,
+.md-block.dir-box,
+.md-block.dir-success,
+.md-block.dir-error
+  &:before
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    background-color: var(--bg);
+    opacity: var(--box-bg-opacity, 0.15);
+    top: 0;
+    z-index: -1;
 
 .md-block > *:first-child { margin-top:0; }
 .md-block > *:last-child { margin-bottom:0; }
 
-.md-block.dir-error {
+.md-block.dir-note
+  &:before 
+    background-color: yellow;
+
+.md-block.dir-error
   color: red;
   border-color: red;
-  background-color: rgba(255, 0,0,0.05);
-}
-.md-block.dir-warn {
+  &:before 
+    background-color: red;
+
+.md-block.dir-warn
   border-color: orange;
-  background-color: rgba(255, 0,0,0.05);
-}
-.md-block.dir-info {
+  &:before 
+    background-color: orange;
+
+.md-block.dir-info 
   border-color: blue;
-  background-color: rgba(0,0,255,0.05);
-}
-.md-block.dir-success {
+  &:before 
+    background-color: blue;
+
+.md-block.dir-success
   border-color: green;
-  background-color: rgba(0,255,0,0.05);
-}
+  &:before 
+    background-color: green;
+
