--- a/src/client/style.styl
+++ b/src/client/style.styl
@@ -14,6 +14,8 @@ body
 
     --code-bg-color: black;
     --code-text-color: white;
+    --code-highlight-bg: #111
+    --code-highlight-text: white;
     --box-bg-opacity: 0.05;
 
     color: var(--text-color)
