--- a/src/client/styles/codecell.styl
+++ b/src/client/styles/codecell.styl
@@ -131,17 +131,27 @@ codecell
     
 
 // Code Mirror overrides
-#lit-app .cm-gutters
+
+#lit-app .editor
     background-color: var(--code-bg-color)
-    color: var(--text-secondary-color)
-    border-right-color: var(--divider-subtle)
+    color: var(--code-text-color)
 
-#lit-app .cm-activeLine.cm-line
-    background-color: var(--text-highlight-bg)
-    color: var(--text-highlight-color)
+    .cm-content
+        caret-color: var(--code-highlight-color)
+    .cm-cursor
+        border-left-color: var(--code-highlight-color)
 
-#lit-app .cm-focused
-    outline: 0 none
+    .cm-gutters
+        background-color: var(--code-bg-color)
+        color: var(--text-secondary-color)
+        border-right-color: var(--text-secondary-color)
+
+    .cm-activeLine.cm-line
+        background-color: var(--code-highlight-bg)
+        color: var(--code-highlight-color)
+
+    .cm-focused
+        outline: 0 none
 
 codecell.dir-error pre
   border: 2px solid red
