add more status to header

--- a/src/client/styles/header.styl
+++ b/src/client/styles/header.styl
@@ -126,6 +126,8 @@
     border-radius: 0.6em
     margin-top: 0.4em
     background-color: #cccccc
+    border: 2px solid var(--bg);
+    margin-left: -6px;
 
 .led-green
     background-color: #33cc33
