--- a/src/client/styles/header.styl
+++ b/src/client/styles/header.styl
@@ -125,7 +125,7 @@
     height: 0.6em
     border-radius: 0.6em
     margin-top: 0.4em
-    background-color: #cccccc
+    background-color: var(--bg-secondary-color)
     box-shadow: 0 0 0 0.1em var(--bg);
     margin-left: -0.2em;
 
