--- a/src/client/style.styl
+++ b/src/client/style.styl
@@ -75,7 +75,7 @@ li > p:first-child
 
 @import "styles/header"
 
-#content [id]:before
+#xxxxx content [id]:before
     content: ''
     display: inline-block
     height: 50px
