--- a/src/client/style.styl
+++ b/src/client/style.styl
@@ -83,8 +83,18 @@ li > p:first-child
     visibility: hidden
     pointer-events: none
 
-:target
-    background-color: var(--text-highlight-bg)
+:target {
+  background-color: transparent;
+  animation: highlight 1000ms ease-out;
+}
+@keyframes highlight {
+  0% {
+    background-color: var(--text-highlight-bg);
+  }
+  100% {
+    background-color: transparent;
+  }
+}
 
 .cell-content
     overflow: hidden
