Use div with class names for cell and codecell elements

--- a/src/client/style.styl
+++ b/src/client/style.styl
@@ -99,7 +99,7 @@ li > p:first-child
 .cell-content
     overflow: hidden
 
-section, cell, codecell
+section, .cell, .codecell
     display: block
 
 section
@@ -112,7 +112,7 @@ section
     section
         margin: 0 0 -3px
     
-    cell
+    .cell
         margin-left: -3px
     
     &:before,
@@ -141,7 +141,7 @@ section
 @import "styles/cell"
 @import "styles/codecell"
 
-cell, codecell
+.cell, .codecell
     position: relative
     @import "./styles/cellmenu"
 
