--- a/src/client/styles/cell.styl
+++ b/src/client/styles/cell.styl
@@ -1,4 +1,4 @@
-cell
+.cell
     cell-border-width = 1px 3px
     cell-border-color = var(--text-primary-color)
 
@@ -38,5 +38,5 @@ cell
                 background-color: black;
                 border-radius: 0;
 
-cell.code + cell.output
+.cell.code + .cell.output
     padding-top: 0
