--- a/src/client/styles/codecell.styl
+++ b/src/client/styles/codecell.styl
@@ -13,7 +13,7 @@ a.codecell-anchor
     text-decoration: none
     color: inherit
 
-codecell
+.codecell
     pre code
         display: block
         padding: var(--medium-space)
@@ -153,6 +153,6 @@ codecell
     .cm-focused
         outline: 0 none
 
-codecell.dir-error pre
+.codecell.dir-error pre
   border: 2px solid red
 
