--- a/src/client/styles/viewers.styl
+++ b/src/client/styles/viewers.styl
@@ -1,17 +1,17 @@
 
-codecell > iframe 
+.codecell > iframe 
   display: block
   width: 100%
 
-codecell img 
+.codecell img 
   display: block
   max-width: 100%
 
-cell:not(.selected) codecell iframe 
+.cell:not(.selected) .codecell iframe 
     pointer-events: none
 
 
-codecell > table
+.codecell > table
   border-collapse: collapse
   border: 1px solid var(--divider-subtle)
   
